# fabric-bar-nix

./: derivation.nix  flake.nix  pyproject.toml  result
bar/: bar.py  volume_widget.py
fabric_bar/: bar.css  bar.py
services/: battery.py
widgets/: battery.py  volume.py
