[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-nix"
version = "0.0.1"
requires-python = ">= 3.11"
authors = [
]
maintainers = [
]
description = "Fabric using Nix"
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
fabric_bar = "fabric_bar.bar:main"

[tool.setuptools]
packages = [ "fabric_bar", "widgets", "services" ]


[tool.setuptools.package-data]
fabric_bar = ["bar.css"]


